--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=igc
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=Adeniran1255$
 
 MAIL_DRIVER=SMTP
 MAIL_HOST=
