--- a/.env
+++ b/.env
@@ -13,10 +13,10 @@ DB_USERNAME=root
 DB_PASSWORD=Adeniran1255$
 
 MAIL_DRIVER=SMTP
-MAIL_HOST=
+MAIL_HOST=cashluck.com.ng
 MAIL_PORT=587
-MAIL_USERNAME=
-MAIL_PASSWORD=
+MAIL_USERNAME=cashluckcom
+MAIL_PASSWORD=ZTfHnOq==rWA
 MAIL_ENCRYPTION = tls
 
 BROADCAST_DRIVER=log
